[package]
name = "finance_streams"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../../erc20" }
casper-types = "1.5.0"

[[bin]]
name = "finance_streams"
path = "src/finance_streams.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true